Added communication to Kafka inside Ubuntu VM

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.kafka.bootstrap-servers=
+server.port=8083 
+spring.profiles.active=@spring.profiles.active@
+
+spring.kafka.bootstrapservers=ubuntu:9092
 kafka.topic=queuing_messages_events
