Added opentracing dependencies and @Bean for io.opentracing.Tracer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 server.port=8083 
 spring.profiles.active=@spring.profiles.active@
+spring.application.name=kafkaProducer
 
-spring.kafka.bootstrapservers=ubuntu:9092
+
+#kafka properties
+spring.kafka.bootstrap-servers=192.168.188.101:9092
 kafka.topic=queuing_messages_events
+
+#jaeger properties
+jaeger.service.name=kafkaProducerTracer
+opentracing.jaeger.udp-sender.host=192.168.188.101
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.log-spans=true
+#opentracing.jaeger.http-sender.url=http://localhost:14268/api/traces
+opentracing.jaeger.probabilistic-sampler.sampling-rate=0.01
