--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,25 @@
 	<description>Kafka producer with opentracing</description>
 
 	<properties>
+	
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring-kafka.version>2.1.4.RELEASE</spring-kafka.version>
+		
+		<!-- kafka -->
+		
+		<version.spring-kafka>2.1.4.RELEASE</version.spring-kafka>
+		
+		<!-- tracing -->
+		
+		<version.opentracing-kafka>0.0.16</version.opentracing-kafka>
+		<version.io.opentracing>0.31.0</version.io.opentracing>
+    	<version.io.opentracing.contrib-opentracing-spring-jaeger-web-starter>1.0.1</version.io.opentracing.contrib-opentracing-spring-jaeger-web-starter>
+    	<version.jaeger>0.33.1</version.jaeger>
+    	
 	</properties>
 
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -33,22 +46,89 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 		</dependency>
+		
+		<!-- kafka -->
+		
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
-			<version>${spring-kafka.version}</version>
+			<version>${version.spring-kafka}</version>
 		</dependency>
+		
+		<!-- tracing -->
+		
+		<!--dependency>
+		  	<groupId>io.opentracing.contrib</groupId>
+		  	<artifactId>opentracing-spring-web-starter</artifactId>
+		  	<version>1.0.1</version>
+		</dependency-->
+		
+		<!-- allows application.properties to be read and automatically sends standard logging to the active span-->
+		
+		<dependency>
+		  	<groupId>io.opentracing.contrib</groupId>
+		  	<artifactId>opentracing-spring-cloud-starter</artifactId>
+		  	<version>0.2.2</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>io.opentracing.contrib</groupId>
+		  <artifactId>opentracing-spring-jaeger-starter</artifactId>
+		  <version>1.0.1</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.jaegertracing</groupId>
+		    <artifactId>jaeger-client</artifactId>
+		    <version>${version.jaeger}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.jaegertracing</groupId>
+		    <artifactId>jaeger-core</artifactId>
+		    <version>${version.jaeger}</version>
+		</dependency>
+		
+		<!--dependency>
+		    <groupId>io.opentracing.contrib</groupId>
+		    <artifactId>opentracing-kafka-spring</artifactId>
+		    <version>${version.opentracing-kafka}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.jaegertracing</groupId>
+		    <artifactId>jaeger-client</artifactId>
+		    <version>${version.jaeger}</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>io.opentracing.contrib</groupId>
+		  <artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+		  <version>${version.io.opentracing.contrib-opentracing-spring-jaeger-web-starter}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>io.opentracing.contrib</groupId>
+		    <artifactId>opentracing-spring-web-autoconfigure</artifactId>
+		    <version>0.3.2</version>
+		</dependency-->
+		
+		<!-- opentracing-spring-jaeger-cloud-starter -->
+		
+		<!-- testing -->
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+		
+		<!--dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka-test</artifactId>
-			<version>${spring-kafka.version}</version>
+			<version>${version.spring-kafka}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency-->
 	</dependencies>
 
 	<build>
